phppgadmin/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: phppgadmin
  name: phppgadmin
spec:
  replicas: 1
  selector:
    app: phppgadmin
    deploymentconfig: phppgadmin
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: phppgadmin
        deploymentconfig: phppgadmin
    spec:
      containers:
      - image: phppgadmin/phppgadmin:latest
        imagePullPolicy: Always
        name: phppgadmin
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - phppgadmin
      from:
        kind: ImageStreamTag
        name: phppgadmin:latest
    type: ImageChange
