phppgadmin/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phppgadmin
  name: phppgadmin
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: phppgadmin
    deploymentconfig: phppgadmin
  sessionAffinity: None
  type: ClusterIP
