phppgadmin/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: phppgadmin
spec:
  to:
    kind: Service
    name: phppgadmin
